networkpolicy/networkpolicy__basic_kafka_setup__mongodb__from__strimzi__ingress__ports__27017__nr43__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb--from--strimzi--ingress--ports--27017--nr43
  namespace: mongodb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: strimzi
    ports:
    - protocol: TCP
      port: 27017
